--- a/app/styles/sections/_third-sec.sass
+++ b/app/styles/sections/_third-sec.sass
@@ -86,7 +86,7 @@
 			margin-top: 0
 			img
 				// position: absolute
-				margin-top: 17%
+				margin-top: 25%
 				height: 80%
 				width: auto
 		
